--- a/docs/style.css
+++ b/docs/style.css
@@ -4,66 +4,106 @@ html, body {
     font-family: "Verdana", sans-serif;
     margin: 0;
 }
-.menu {
+.navbar {
     overflow: hidden;
-    top: 0;
     background-color: rgba(255, 248, 248, 0.7);
-    box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.2); 
     text-align: center;
-}
-.menu img{
     margin: auto;
-    width:60%;
+    width: 100%;
 }
-.menu a.icon{
-    display: none;
-}
-.menu a {
-    display: inline-block;
-    font-family: "Arial";
-    color: rgb(10, 47, 61);
-    text-decoration: none;
+.navbar a {
+    float: left;
     font-size: 1.2rem;
-    letter-spacing: 2px;
-    text-transform: uppercase;
+    color: rgb(15, 57, 72);
+    text-align: center;
     padding: 1rem 2rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 2px;
 }
-.menu .menu-list{
-    padding: 10px;
+.subnav {
+    float: left;
+    overflow: hidden;
 }
-.menu a:hover {
+.subnav .subnavbtn {
+  font-size: 1.2rem;  
+  letter-spacing: 2px;
+  border: none;
+  outline: none;
+  text-transform: uppercase;
+  color: rgb(15, 57, 72);
+  padding: 1rem 2rem;
+  background-color: inherit;
+  font-family: inherit;
+}
+.navbar a:hover, .subnav:hover .subnavbtn {
     background-color: rgba(28, 32, 37, 0.3);
-    cursor: pointer;
-    color: #fff;
     transition: all ease 0.3s;
 }
+.subnav-content {
+  display: none;
+  position: absolute;
+  left: 0;
+  background-color: rgba(28, 32, 37, 0.3);
+  width: 100%;
+  z-index: 1;
+}
+.subnav-content a {
+  float: left;
+  color: white;
+  text-decoration: none;
+}
+.subnav-content a:hover {
+  background-color: #eee;
+  color: black;
+}
+.subnav:hover .subnav-content {
+  display: block;
+}
+.navbar img{
+    margin: auto;
+    width:70%;
+}
+.navbar a.icon{
+    display: none;
+}
 @media screen and (max-width: 820px){
-    .menu a:not(:first-child) {display: none;}
-    .menu a.icon {
+    .navbar a:not(:first-child) {display: none;}
+    .navbar a.icon {
       float: right;
       display: block;
       font-size: 1rem;
     }
 }
 @media screen and (max-width: 820px) {
-    .menu.responsive {position: relative;}
-    .menu.responsive .icon {
+    .navbar.responsive {
+        position: relative;
+    }
+    .navbar.responsive .icon {
       position: absolute;
       right: 0;
       top: 0;
     }
-    .menu a{
+    .navbar a{
         font-size: 1rem;
         float: left;
         background-color: rgba(109, 106, 106, 0.7);
         color: #fff;
     }
-    .menu.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
+    .navbar.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
     }
-  }
+    .navbar.responsive .subnav{
+        float: none;
+        display: block;
+        text-align: left;
+    }
+}
+
+
 .titles{
     font-family: 'ChopinScript';
     color: rgb(35, 2, 0);
@@ -101,6 +141,7 @@ h1{
     transform: translate(-50%, -50%);
 }
 h2{
+    padding: 2rem;
     font-size: 3rem;
     text-align: center;
     position: relative;
@@ -156,3 +197,104 @@ div.desc {
     display: table;
     clear: both;
 }
+
+/*About us Styling*/
+@import url('https://fonts.googleapis.com/css?family=Exo+2|Yatra+One');
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.wrapper{
+  margin-top: 60px;
+  text-align: center;
+}
+
+.wrapper h1{
+  font-size: 3rem;
+  color: rgb(35, 2, 0);
+  margin-bottom: 30px;
+}
+
+.our_team{
+  width: auto;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.our_team .team_member{
+  width: 250px;
+  margin: 20px 20px;
+  background: #fff;
+  padding: 15px 20px;
+  border-radius:15px;
+  border: 1px solid black;
+}
+
+.our_team .team_member .member_img{  
+  max-width: 190px;
+  width: 100%;
+  height: 200px;
+  margin: 0 auto;
+  padding: 5px 0px;
+  position: relative;
+  cursor: pointer;
+  border: 2px rgb(0, 53, 128);
+}
+.member_img{
+    border-radius: 50%;
+}
+.our_team .team_member .member_img img{
+  width: 100%;
+  height: 100%;
+}
+
+.our_team .team_member h3{
+  text-transform: uppercase;
+  font-size: 18px;
+  line-height: 20px;
+  letter-spacing: 2px;
+  margin: 15px 0 10px;
+}
+
+.our_team .team_member span{
+  font-size: 16px;
+}
+
+.our_team .team_member p{
+  margin-top: 10px;
+  font-size: 14px;
+  line-height: 20px;
+}
+
+.our_team .team_member .member_img .social_media{
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  background: rgba(0,0,0,0.65);
+  width: 95%;
+  height: 95%;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform: scale(0);
+   transition: all 0.5s ease;
+}
+.bottom{
+    background-color: rgba(255, 248, 248, 0.7);
+    box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.2);
+    padding: 1rem;
+    width: 80%;
+    margin: auto;
+}
+.bottom h2{
+    padding: 0;
+    font-size: 2rem;
+}
+.texts{
+    font-size: 1rem;
+}
+
